--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
-.App {
-  text-align: center;
-}
+
+@import url('https://fonts.googleapis.com/css2?family=Poller+One&display=swap');
+
 .Header {
-  color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
+}
+
+* {
+  font-family: 'Poller One', cursive;
+  box-sizing: border-box;
 }
 /* write your parent styles in here for your App.js */
